# pysdm

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.in
autom4te.cache/: output.0  requests  traces.0
data/: pysdm.desktop  pysdm.glade  pysdm.glade.h  pysdm.gladep
data/fsdata/: default  reiserfs
po/: Makefile.in  POTFILES.in  TRANSLATORS  es.po  fr.po  gl.po  it.po  pysdm.po  pysdm.pot  ru.po
po/es/LC_MESSAGES/: pysdm.mo
pysdm/: __init__.py  blkid.py  constants.py  fstab.py  options_ui.py  pysdm.py  pysdm.py.orig  release.py  release.py.in  sysfs.py
pysdm/fsdata/: __init__.py  constants.py  default.py  ext2.py  ext3.py  fat.py  ntfs.py  reiserfs.py  swap.py  vfat.py  xfs.py
scripts/: pysdm
