AC_INIT(scripts/pysdm)

AM_INIT_AUTOMAKE(pysdm, 0.4.1)

AM_MAINTAINER_MODE

AC_PATH_PROG(GCONFTOOL, gconftool-2)
#AM_GCONF_SOURCE_2
#AC_PROG_INTLTOOL([0.23])

dnl check for python
AM_PATH_PYTHON(2.4)

ALL_LINGUAS="es ru"
AC_SUBST(ALL_LINGUAS)
AC_DEFINE_UNQUOTED(ALL_LINGUAS, "$ALL_LINGUAS")

GETTEXT_PACKAGE=pysdm
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
po/Makefile 
Makefile
pysdm/release.py
])
